# 8004-boilerplate

./: .env.example  .gitignore  README.md  ape-config.yaml  contract_verifier.py  notes.txt  pyproject.toml  state.json
app/: main.py
contracts/: IERC721.vyi  IIdentityRegistry.vyi  IReputationRegistry.vyi  IValidationRegistry.vyi  IdentityRegistry.vy  ReputationRegistry.vy  TaskAgent.vy  ValidationRegistry.vy
frontend/: index.html
scripts/: deploy.py  deploy_agent.py
tests/: test_task_agent.py
